Bug 143449 - Cursor doesn't blink in comment box
Summary: Cursor doesn't blink in comment box
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: lowest trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Comments Weld-Writer-Comments
  Show dependency treegraph
 
Reported: 2021-07-20 07:06 UTC by Telesto
Modified: 2026-02-15 23:27 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-07-20 07:06:32 UTC
Description:
Cursor doesn't blink in comment box

Steps to Reproduce:
1. Open Writer
2. Insert a comment
3. Type something (not really needed)
4. Look at the cursor

Actual Results:
Static line for 'cursor'

Expected Results:
Blinking as normally


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 3d18cae102e16b85fb8787f5ec3b086bfa2bd7b8
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: nl-NL
Calc: CL
Comment 1 Xisco Faulí 2021-07-20 13:42:13 UTC Comment hidden (obsolete)
Comment 2 Xisco Faulí 2021-07-20 13:56:16 UTC
Nevermind, I can reproduce the missing blink.

Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=69c546e1e7a697217f273baa7c1729ff823efd76

author	Caolán McNamara <caolanm@redhat.com>	2020-12-04 16:30:31 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2021-02-06 12:16:04 +0100
commit 69c546e1e7a697217f273baa7c1729ff823efd76 (patch)
tree 4533c38b84d1cd57f86094ac816f0eb7c526ade1
parent 2c61782812b1b8b382dd48a04a712da9eaeb4685 (diff)
weld annotation window

Bisected with: bibisect-linux64-7.2

Adding Cc: to Caolán McNamara
Comment 3 Telesto 2021-09-21 17:55:38 UTC
No change
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d5e55d204b71710eb5eb5d2c683dd6698626df3c
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 4 Aditya Sahu 2024-10-18 05:48:12 UTC
I will take this up and start working on it
Comment 5 Aditya Sahu 2024-10-19 01:25:54 UTC
How would one go about solving this problem tdf#143449? I've looked over in the codebase, tried to use debugger in "sw\source\uibase\docvw\PostItMgr.cxx" and "sw\source\uibase\docvw\AnnotationWin.cxx".. wondering if I'm looking at the right code pointers ... Some guidance appreciated :)
Comment 6 Aditya Sahu 2024-11-04 03:37:21 UTC
Could not make any progress after debugging and changing code through hit and trial. Changing status back to NEW.
Comment 7 Commit Notification 2026-02-15 21:28:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/21b0793b53645d577c193892c0d9f5a2f27f6927

Related: tdf#143449 allow distinguishing Invalidation reasons

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2026-02-15 23:24:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cd77de410a4cf94a417b1e4ea3aacf5fdf168c2e

Related: tdf#143449 rework vcl::Cursor drawing to measure the affected area

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2026-02-15 23:25:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ac8fa2c59acfcd33bf990bf9e173b0f3b4d416a8

Resolves: tdf#143449 implement a blinking cursor for weldeditview

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.