Related: tdf#143449 allow distinguishing Invalidation reasons

Change-Id: Icf6d7adc7bcf4edcb361fd294541d78a2bc7a57e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199393
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins